// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mutation commentOnComment should comment on a comment 1`] = `
Object {
  "comments": 0,
  "content": "my comment",
  "id": Any<String>,
  "parentId": "c1",
  "postId": "p1",
}
`;

exports[`mutation commentOnPost should comment on a post 1`] = `
Object {
  "content": "my comment",
  "id": Any<String>,
  "parentId": null,
}
`;

exports[`mutation upvoteComment should ignore conflicts 1`] = `
Array [
  CommentUpvote {
    "commentId": "c1",
    "userId": "1",
  },
]
`;

exports[`mutation upvoteComment should upvote comment 1`] = `
Array [
  CommentUpvote {
    "commentId": "c1",
    "userId": "1",
  },
]
`;

exports[`query commentUpvotes should return users that upvoted the comment by id 1`] = `
Object {
  "commentUpvotes": Object {
    "edges": Array [
      Object {
        "node": Object {
          "user": Object {
            "bio": null,
            "image": "https://daily.dev/ido.jpg",
            "name": "Ido",
            "username": null,
          },
        },
      },
    ],
  },
}
`;

exports[`query postComments should fetch comments and sub-comments of a post 1`] = `
Object {
  "postComments": Object {
    "edges": Array [
      Object {
        "node": Object {
          "author": Object {
            "id": "1",
            "image": "https://daily.dev/ido.jpg",
            "name": "Ido",
          },
          "children": Object {
            "edges": Array [
              Object {
                "node": Object {
                  "author": Object {
                    "id": "1",
                    "image": "https://daily.dev/ido.jpg",
                    "name": "Ido",
                  },
                  "content": "child comment",
                  "createdAt": "2020-02-07T00:00:00.000Z",
                  "id": "c2",
                  "permalink": "http://localhost:5002/posts/p1",
                  "upvoted": null,
                },
              },
            ],
            "pageInfo": Object {
              "endCursor": "dGltZToxNTgxMDMzNjAwMDAw",
              "hasNextPage": false,
            },
          },
          "content": "parent comment",
          "createdAt": "2020-02-06T00:00:00.000Z",
          "id": "c1",
          "permalink": "http://localhost:5002/posts/p1",
          "upvoted": null,
        },
      },
      Object {
        "node": Object {
          "author": Object {
            "id": "2",
            "image": "https://daily.dev/tsahi.jpg",
            "name": "Tsahi",
          },
          "children": Object {
            "edges": Array [],
            "pageInfo": Object {
              "endCursor": null,
              "hasNextPage": false,
            },
          },
          "content": "parent comment #2",
          "createdAt": "2020-02-08T00:00:00.000Z",
          "id": "c3",
          "permalink": "http://localhost:5002/posts/p1",
          "upvoted": null,
        },
      },
      Object {
        "node": Object {
          "author": Object {
            "id": "3",
            "image": "https://daily.dev/nimrod.jpg",
            "name": "Nimrod",
          },
          "children": Object {
            "edges": Array [
              Object {
                "node": Object {
                  "author": Object {
                    "id": "2",
                    "image": "https://daily.dev/tsahi.jpg",
                    "name": "Tsahi",
                  },
                  "content": "child comment #3",
                  "createdAt": "2020-02-10T00:00:00.000Z",
                  "id": "c7",
                  "permalink": "http://localhost:5002/posts/p1",
                  "upvoted": null,
                },
              },
            ],
            "pageInfo": Object {
              "endCursor": "dGltZToxNTgxMjkyODAwMDAw",
              "hasNextPage": false,
            },
          },
          "content": "parent comment #4",
          "createdAt": "2020-02-09T00:00:00.000Z",
          "id": "c6",
          "permalink": "http://localhost:5002/posts/p1",
          "upvoted": null,
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "dGltZToxNTgxMjA2NDAwMDAw",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query postComments should fetch comments and sub-comments of a post with upvoted 1`] = `
Object {
  "postComments": Object {
    "edges": Array [
      Object {
        "node": Object {
          "author": Object {
            "id": "1",
            "image": "https://daily.dev/ido.jpg",
            "name": "Ido",
          },
          "children": Object {
            "edges": Array [
              Object {
                "node": Object {
                  "author": Object {
                    "id": "1",
                    "image": "https://daily.dev/ido.jpg",
                    "name": "Ido",
                  },
                  "content": "child comment",
                  "createdAt": "2020-02-07T00:00:00.000Z",
                  "id": "c2",
                  "permalink": "http://localhost:5002/posts/p1",
                  "upvoted": false,
                },
              },
            ],
            "pageInfo": Object {
              "endCursor": "dGltZToxNTgxMDMzNjAwMDAw",
              "hasNextPage": false,
            },
          },
          "content": "parent comment",
          "createdAt": "2020-02-06T00:00:00.000Z",
          "id": "c1",
          "permalink": "http://localhost:5002/posts/p1",
          "upvoted": true,
        },
      },
      Object {
        "node": Object {
          "author": Object {
            "id": "2",
            "image": "https://daily.dev/tsahi.jpg",
            "name": "Tsahi",
          },
          "children": Object {
            "edges": Array [],
            "pageInfo": Object {
              "endCursor": null,
              "hasNextPage": false,
            },
          },
          "content": "parent comment #2",
          "createdAt": "2020-02-08T00:00:00.000Z",
          "id": "c3",
          "permalink": "http://localhost:5002/posts/p1",
          "upvoted": false,
        },
      },
      Object {
        "node": Object {
          "author": Object {
            "id": "3",
            "image": "https://daily.dev/nimrod.jpg",
            "name": "Nimrod",
          },
          "children": Object {
            "edges": Array [
              Object {
                "node": Object {
                  "author": Object {
                    "id": "2",
                    "image": "https://daily.dev/tsahi.jpg",
                    "name": "Tsahi",
                  },
                  "content": "child comment #3",
                  "createdAt": "2020-02-10T00:00:00.000Z",
                  "id": "c7",
                  "permalink": "http://localhost:5002/posts/p1",
                  "upvoted": true,
                },
              },
            ],
            "pageInfo": Object {
              "endCursor": "dGltZToxNTgxMjkyODAwMDAw",
              "hasNextPage": false,
            },
          },
          "content": "parent comment #4",
          "createdAt": "2020-02-09T00:00:00.000Z",
          "id": "c6",
          "permalink": "http://localhost:5002/posts/p1",
          "upvoted": false,
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "dGltZToxNTgxMjA2NDAwMDAw",
      "hasNextPage": false,
    },
  },
}
`;

exports[`query userComments should fetch comments by user id 1`] = `
Object {
  "userComments": Object {
    "edges": Array [
      Object {
        "node": Object {
          "author": Object {
            "id": "1",
            "image": "https://daily.dev/ido.jpg",
            "name": "Ido",
          },
          "content": "child comment #2",
          "createdAt": "2020-02-10T00:00:00.000Z",
          "id": "c5",
          "permalink": "http://localhost:5002/posts/p2",
          "upvoted": null,
        },
      },
      Object {
        "node": Object {
          "author": Object {
            "id": "1",
            "image": "https://daily.dev/ido.jpg",
            "name": "Ido",
          },
          "content": "child comment",
          "createdAt": "2020-02-07T00:00:00.000Z",
          "id": "c2",
          "permalink": "http://localhost:5002/posts/p1",
          "upvoted": null,
        },
      },
      Object {
        "node": Object {
          "author": Object {
            "id": "1",
            "image": "https://daily.dev/ido.jpg",
            "name": "Ido",
          },
          "content": "parent comment",
          "createdAt": "2020-02-06T00:00:00.000Z",
          "id": "c1",
          "permalink": "http://localhost:5002/posts/p1",
          "upvoted": null,
        },
      },
    ],
    "pageInfo": Object {
      "endCursor": "dGltZToxNTgwOTQ3MjAwMDAw",
      "hasNextPage": false,
    },
  },
}
`;
